# surveyprep

./: CHANGELOG.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
surveyprep/: README.md  __init__.py  pipeline.py  test_surveyprep.py
surveyprep/adapters/: __init__.py  base.py  ehcvm_ben_2021.py  ehcvm_bfa_2021.py  ehcvm_civ_2021.py  ehcvm_gnb_2021.py  ehcvm_mli_2021.py  ehcvm_ner_2021.py  ehcvm_sen_2021.py  ehcvm_tgo_2021.py  susenas_2017.py  susenas_2018.py  susenas_2019.py  susenas_2020.py  susenas_2021.py  susenas_2022.py  susenas_2023.py  susenas_2024.py  susenas_2025.py
surveyprep/core/: __init__.py  exporter.py  finder.py  imputer.py  reader.py  reader_stata.py  runner.py
surveyprep/susenas/: __init__.py  food_exp.py  hh_record.py  individual.py  individual_2024.py  integrator.py  nonfood_exp.py
surveyprep/tools/: __init__.py  adapter_generator.py  notebook_generator.py
